// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should be rendered correctly 1`] = `
<DocumentFragment>
  <button
    class="uui-button-box uui-enabled container uui-icon_button uui-color-neutral root"
    tabindex="-1"
    type="button"
  >
    <div
      class="container uui-icon uui-enabled"
    />
  </button>
</DocumentFragment>
`;

exports[`IconButton should be rendered correctly with props 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    class="uui-button-box uui-disabled container uui-icon_button uui-color-primary root"
    tabindex="-1"
    type="button"
  >
    <div
      class="container uui-icon uui-enabled"
    >
      <svg
        class=""
      />
    </div>
    <div
      class="container uui-icon uui-enabled"
    >
      <svg
        class=""
      />
    </div>
  </button>
</DocumentFragment>
`;
